k3s/wireguard/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard-deployment
  namespace: wireguard
  labels:
    app: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      hostname: wireguard
      containers:
        - name: wireguard
          image: ghcr.io/wg-easy/wg-easy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 51820
              name: wireguard
              protocol: UDP
            - containerPort: 51821
              name: wireguard-admin
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/wireguard
              name: wireguard-data
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            capabilities:
                add:
                  - NET_ADMIN
                  - SYS_MODULE
      volumes:
        - name: wireguard-data
          persistentVolumeClaim:
            claimName: wireguard-data
