k3s/wireguard/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    metallb.universe.tf/address-pool: "lb-pool"
    metallb.universe.tf/allow-shared-ip: "public-ip"
spec:
  type: LoadBalancer
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - port: 51820
      targetPort: 51820
      name: wireguard
      protocol: UDP
  selector:
    app: wireguard

---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-admin
  namespace: wireguard
  annotations:
    metallb.universe.tf/address-pool: "lb-pool"
    metallb.universe.tf/allow-shared-ip: "public-ip"
spec:
  type: LoadBalancer
  ports:
    - port: 51821
      targetPort: 51821
      name: wireguard-admin
      protocol: TCP
  selector:
    app: wireguard
